--- a/react router dom v5/style.css
+++ b/react router dom v5/style.css
@@ -14,8 +14,13 @@ div#root {
 }
 
 nav {
-    padding: 20px;
+    padding: 10px 200px;
     height: 10%;
+    background-color: aqua;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: max-content;
 }
 
 main {
@@ -42,21 +47,23 @@ form div {
     align-items: center;
     flex-direction: column;
     border: 1px solid black;
-    padding: 50px;
-    width: 300px;
+    padding: 100px;
+    width: 400px;
     margin: 30px;
 }
 
 input {
-    padding: 10px;
+    padding: 12px;
     margin: 20px;
     outline: none;
+    width: 300px;
+    font-size: 14px;
 }
 
 button[type="submit"] {
-    padding: 10px;
+    padding: 20px;
     margin: 20px;
     border: 1px solid black;
-    width: 100%;
+    width: 300px;
     cursor: pointer;
 }
