--- a/experiment/style.css
+++ b/experiment/style.css
@@ -2,68 +2,61 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
-    min-height: 100vh;
+}
+
+body {
+    height: 100vh;
     width: 100vw;
-  }
-  
-  div#root {
+}
+
+div#root {
     height: 100%;
-  }
-  
-  nav {
-    padding: 10px 200px;
+}
+
+nav {
+    padding: 20px;
     height: 10%;
-    background-color: aqua;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: max-content;
-  }
-  
-  main {
-    min-height: calc(100vh - 10%);
+}
+
+main {
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  nav a {
+
+}
+
+nav a {
     margin: 10px 40px;
     padding: 10px;
     background-color: antiquewhite;
-  }
-  
-  h1 {
+}
+
+h1{
     margin: 10px;
-  }
-  
-  form div {
+}
+
+form div {
     display: flex !important;
     align-items: center;
     flex-direction: column;
     border: 1px solid black;
-    padding: 100px;
-    width: 400px;
+    padding: 50px;
+    width: 300px;
     margin: 30px;
-  }
-  
-  input {
-    padding: 12px;
+}
+
+input {
+    padding: 10px;
     margin: 20px;
     outline: none;
-    width: 300px;
-    font-size: 14px;
-  }
-  
-  button[type="submit"] {
-    padding: 20px;
+}
+
+button[type="submit"] {
+    padding: 10px;
     margin: 20px;
     border: 1px solid black;
-    width: 300px;
+    width: 100%;
     cursor: pointer;
-  }
-  
+}
