--- a/final_code/using_popstate_event/style.css
+++ b/final_code/using_popstate_event/style.css
@@ -2,18 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    height: 100vh;
+  }
+  
+  body {
+    min-height: 100vh;
     width: 100vw;
-}
-
-div#root {
+  }
+  
+  div#root {
     height: 100%;
-}
-
-nav {
+  }
+  
+  nav {
     padding: 10px 200px;
     height: 10%;
     background-color: aqua;
@@ -21,27 +21,27 @@ nav {
     align-items: center;
     justify-content: center;
     height: max-content;
-}
-
-main {
-    height: 90%;
+  }
+  
+  main {
+    min-height: calc(100vh - 10%);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-nav a {
+  }
+  
+  nav a {
     margin: 10px 40px;
     padding: 10px;
     background-color: antiquewhite;
-}
-
-h1 {
+  }
+  
+  h1 {
     margin: 10px;
-}
-
-form div {
+  }
+  
+  form div {
     display: flex !important;
     align-items: center;
     flex-direction: column;
@@ -49,20 +49,21 @@ form div {
     padding: 100px;
     width: 400px;
     margin: 30px;
-}
-
-input {
+  }
+  
+  input {
     padding: 12px;
     margin: 20px;
     outline: none;
     width: 300px;
     font-size: 14px;
-}
-
-button[type="submit"] {
+  }
+  
+  button[type="submit"] {
     padding: 20px;
     margin: 20px;
     border: 1px solid black;
     width: 300px;
     cursor: pointer;
-}
+  }
+  
